# phantom

./: CMakeLists.txt  README.md
3rd/: Makefile
3rd/ed25519-donna/: CMakeLists.txt  Makefile.am  test-internals.c  test.c
3rd/gtest/: Makefile
3rd/http/: CMakeLists.txt  HttpClient.cpp  Makefile.am  connection.cpp  connection.hpp  connection_manager.hpp  io_service_pool.cpp  request.hpp  server.cpp  server.hpp
3rd/jsoncpp/: SConstruct  automake.sh
3rd/libscrypt/: Makefile  Makefile-raw  libscrypt.h  main.c
3rd/openssl/: Configure  config
3rd/pcre-8.39/: pcre-config
3rd/protobuf/: configure
3rd/protocol/: PacketMq.proto
3rd/random/: .travis.yml
3rd/rocksdb/: Makefile
api/: console.cpp  console.h  web_server.cpp  web_server.h  web_server_command.cpp  web_server_helper.cpp  web_server_query.cpp  web_server_update.cpp  websocket_server.cpp  websocket_server.h
common/: CMakeLists.txt  README.md  argument.cpp  argument.h  configure_base.cpp  configure_base.h  daemon.cpp  daemon.h  data_secret_key.cpp  data_secret_key.h  general.cpp  general.h  key_store.cpp  key_store.h  network.cpp  network.h  pb2json.cpp  pb2json.h  private_key.cpp  private_key.h  storage.cpp  storage.h
consensus/: CMakeLists.txt  README.md  bft.cpp  bft.h  bft_instance.cpp  bft_instance.h  consensus.cpp  consensus.h  consensus_manager.cpp  consensus_manager.h  consensus_msg.cpp  consensus_msg.h
daemon/: CMakeLists.txt
daemon/phantom/: main.cpp
glue/: CMakeLists.txt  README.md  glue_manager.cpp  glue_manager.h  ledger_upgrade.cpp  ledger_upgrade.h  transaction_queue.cpp  transaction_queue.h  transaction_set.cpp  transaction_set.h
ledger/: CMakeLists.txt  README.md  account.cpp  account.h  asset_frm.h  contractBasedToken.js  contract_manager.cpp  contract_manager.h  environment.cpp  environment.h  fee_calculate.cpp  fee_calculate.h  fee_compulate.cpp  fee_compulate.h  fees-voting.js  fees-voting.min.js  kv_trie.cpp  kv_trie.h  ledger_frm.cpp  ledger_frm.h  ledger_manager.cpp  ledger_manager.h  ledgercontext_manager.cpp  ledgercontext_manager.h  operation_frm.cpp  operation_frm.h  transaction_frm.cpp  transaction_frm.h  trie.cpp  trie.h  validators_vote.js  validators_vote.min.js
libconsensus/: Common.h  ConsensusEngineBase.cpp  ConsensusEngineBase.h  ConsensusInterface.h  Sealer.cpp  Sealer.h
libphantom_tools/: CMakeLists.txt  README.md  lib_phantom_tools.cpp  lib_phantom_tools.h
main/: CMakeLists.txt  configure.cpp  configure.h  main.cpp
monitor/: CMakeLists.txt  monitor.cpp  monitor.h  monitor_manager.cpp  monitor_manager.h  system_manager.cpp  system_manager.h
overlay/: CMakeLists.txt  README.md  broadcast.cpp  broadcast.h  peer.cpp  peer.h  peer_manager.cpp  peer_manager.h  peer_network.cpp  peer_network.h
proto/: CMakeLists.txt  README.md  chain.proto  common.proto  consensus.proto  merkeltrie.proto  monitor.proto  overlay.proto  protoc-chain.bat  protoc-common.bat  protoc-consensus.bat  protoc-merkeltrie.bat  protoc-monitor.bat  protoc-overlay.bat  protoc.bat
proto/cpp/: chain.pb.cc  chain.pb.h  common.pb.cc  common.pb.h  consensus.pb.cc  consensus.pb.h  merkeltrie.pb.cc  merkeltrie.pb.h  monitor.pb.cc  monitor.pb.h  overlay.pb.cc  overlay.pb.h
proto/go/: Readme.txt  test.go
proto/go/protocol/: chain.pb.go  common.pb.go  consensus.pb.go  merkeltrie.pb.go  monitor.pb.go  overlay.pb.go
proto/io/bumo/sdk/core/extend/protobuf/: Chain.java  Common.java  Consensus.java  Merkeltrie.java  Monitor.java  Overlay.java
proto/ios/: Readme.txt
proto/ios/ios/: AppDelegate.h  AppDelegate.m  ViewController.h  ViewController.m  main.m
proto/ios/ios.xcodeproj/: project.pbxproj
proto/ios/ios.xcodeproj/project.xcworkspace/xcuserdata/fengruiming.xcuserdatad/: UserInterfaceState.xcuserstate
proto/ios/ios.xcodeproj/xcuserdata/fengruiming.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
proto/ios/ios/protocol/: Chain.pbobjc.h  Chain.pbobjc.m  Common.pbobjc.h  Common.pbobjc.m  Consensus.pbobjc.h  Consensus.pbobjc.m  Merkeltrie.pbobjc.h  Merkeltrie.pbobjc.m  Overlay.pbobjc.h  Overlay.pbobjc.m
proto/ios/ios/protocol/google/protobuf/: Struct.pbobjc.m  Type.pbobjc.m
proto/js/: test.js
proto/js/protocol/: chain_pb.js  common_pb.js  consensus_pb.js  merkeltrie_pb.js  overlay_pb.js
proto/php/: Readme.txt  composer.json  test.php
proto/php/GPBMetadata/: Chain.php  Common.php  Consensus.php  Merkeltrie.php  Overlay.php
proto/php/Protocol/: Account.php  AccountPrivilege.php  AccountThreshold.php  Asset.php  AssetKey.php  AssetProperty.php  AssetStore.php  CHILDTYPE.php  ChainHello.php  ChainMessageType.php  ChainPeerMessage.php  ChainResponse.php  ChainStatus.php  ChainSubscribeTx.php  ChainTxStatus.php  ChainTxStatus_TxStatus.php  Child.php  ConsensusValue.php  ConsensusValueValidation.php  Contract.php  Contract_ContractType.php  DontHave.php  ERRORCODE.php  EntryList.php  FeeConfig.php  FeeConfig_Type.php  GetLedgers.php  Hello.php  HelloResponse.php  KeyPair.php  Ledger.php  LedgerHeader.php  LedgerUpgrade.php  LedgerUpgradeNotify.php  Ledgers.php  Ledgers_SyncCode.php  Limit.php  Node.php  OVERLAY_MESSAGE_TYPE.php  Operation.php  (+41 more)
proto/php/Protocol/Contract/: ContractType.php
proto/php/Protocol/Operation/: Type.php
proto/php/Protocol/Signer/: Limit.php
proto/php/Protocol/Transaction/: Limit.php
proto/php/Protocol/Trigger/: OperationTrigger.php  TransactionType.php
proto/protocol/: Consensus.java  Merkeltrie.java
proto/python/protocol/: Readme.txt  chain_pb2.py  common_pb2.py  consensus_pb2.py  merkeltrie_pb2.py  overlay_pb2.py  test.py
utils/: CMakeLists.txt  README.md  atom_map.h  base_int.cpp  base_int.h  basen.h  common.h  crypto.cpp  crypto.h  ecc_sm2.cpp  ecc_sm2.h  entry_cache.h  exprparser.cpp  exprparser.h  file.cpp  file.h  headers.h  logger.cpp  logger.h  net.cpp  net.h  noncopyable.h  random.cpp  random.h  scopeGuard.h  serializer.cpp  serializer.h  singleton.h  sm3.cpp  sm3.h  sqlparser.cpp  sqlparser.h  strings.h  system.cpp  system.h  thread.cpp  thread.h  timer.cpp  timer.h  timestamp.cpp  (+3 more)
web/: index.html  websocket.html
(+31 files in other folders)
